k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: tap-session-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.tap.iflambda.com
      http:
        paths:
          - backend:
              service:
                name: tap-session-app-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.tap.iflambda.com
      secretName: app-tap-iflambda-com-tls
